Use word wrap to prevent unnecessary horizontal scrolling.

--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ figure.instruction figcaption {
 }
 
 body {
+	overflow-wrap: break-word;
 	padding: 1.5rem;
 	line-height: var(--line_height);
 }
